Checkboxes are working. Next step is saving passwords.

--- a/SimplePasswordGenerator/app/src/main/res/layout/activity_main.xml
+++ b/SimplePasswordGenerator/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         android:layout_alignEnd="@+id/botonGuardar"
         android:textSize="24dp" />
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/pantallaClave"
@@ -73,8 +73,9 @@
         android:layout_below="@+id/barraLongitud"
         android:text="@string/pantallaClaveDefault"
         android:textColor="#adadad"
+        android:textSize="18dp"
         android:textAlignment="center"
-        android:editable="true" />
+        android:textIsSelectable="true"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -90,5 +91,5 @@
         android:text="@string/simCheckbox"
         android:id="@+id/simCheckbox"
         android:layout_alignParentTop="false"
-        android:layout_alignStart="@id/botonGuardar" />
+        android:layout_marginStart="200dp"/>
 </RelativeLayout>
